vyre-macros/tests/ui/bad_pass_analyze_mode.stderr
error: unsupported analyze mode. Fix: use analyze = "always" or omit it.
 --> tests/ui/bad_pass_analyze_mode.rs:7:15
  |
7 |     analyze = "sometimes"
  |               ^^^^^^^^^^^
